--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,7 @@ add_executable(LearnVulkanDemos_01_HelloTriangle)
 target_sources(LearnVulkanDemos_01_HelloTriangle PRIVATE
     src/platform.cpp
     src/main.cpp
+    src/PhysicalDeviceInfoOps.cpp
     src/PhysicalDeviceProperties.cpp
     src/PhysicalDeviceRequirements.cpp
     src/PlatformInfo.cpp
