--- a/internal/vulkan_engine/CMakeLists.txt
+++ b/internal/vulkan_engine/CMakeLists.txt
@@ -11,8 +11,6 @@ target_sources(vulkan_engine PRIVATE
     vulkan_engine/vulkan_platform/vulkan_instance_requirements_builder.cpp
     vulkan_engine/vulkan_platform/vulkan_instance_requirements.cpp
     vulkan_engine/vulkan_platform/vulkan_platform.cpp
-)
-target_sources(vulkan_engine PRIVATE
     vulkan_engine/vulkan_platform_impl_fmt.cpp
 )
 
@@ -21,5 +19,6 @@ find_package(Vulkan REQUIRED)
 
 target_link_libraries(vulkan_engine PUBLIC Vulkan::Vulkan)
 target_link_libraries(vulkan_engine PUBLIC fmt)
+target_link_libraries(vulkan_engine PRIVATE glfw)
 
 target_include_directories(vulkan_engine INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
