Add texture loading.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ find_package(Vulkan REQUIRED)
 add_subdirectory(external/glfw-3.4)
 add_subdirectory(external/glm-1.0.1)
 add_subdirectory(external/fmt-10.2.0)
+add_subdirectory(external/stb)
 
 add_subdirectory(internal/vulkan_engine)
 
@@ -93,6 +94,7 @@ target_link_libraries(LearnVulkanDemos_04_TextureMapping PRIVATE vulkan_engine)
 target_link_libraries(LearnVulkanDemos_04_TextureMapping PRIVATE glfw)
 target_link_libraries(LearnVulkanDemos_04_TextureMapping PRIVATE glm)
 target_link_libraries(LearnVulkanDemos_04_TextureMapping PRIVATE fmt)
+target_link_libraries(LearnVulkanDemos_04_TextureMapping PRIVATE stb)
 add_dependencies(LearnVulkanDemos_04_TextureMapping GLSL_Shaders)
 add_dependencies(LearnVulkanDemos_04_TextureMapping HLSL_Shaders)
 
