Add documentation and new target run cmake command.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -115,3 +115,10 @@ add_custom_target(
     HLSL_Shaders
     DEPENDS ${HLSL_SPIRV_BINARY_FILES}
 )
+
+add_custom_target(run
+    COMMAND ${CMAKE_COMMAND} -E env $<TARGET_FILE:LearnVulkanDemos_09_ComputeShaders>
+    DEPENDS "LearnVulkanDemos_09_ComputeShaders"
+    WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
+    VERBATIM
+)
